charts/tests/test_data/eks/expected/admissionregistration.k8s.io/v1beta1/ValidatingWebhookConfiguration/config.webhook.pipeline.tekton.dev-valwebhookcfg.yaml
# Source: tekton/templates/500-webhooks.yaml
# Copyright 2020 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: config.webhook.pipeline.tekton.dev
  labels:
    pipeline.tekton.dev/release: v0.11.3
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: tekton-pipelines-webhook
        namespace: jx
    failurePolicy: Fail
    sideEffects: None
    name: config.webhook.pipeline.tekton.dev
    namespaceSelector:
      matchExpressions:
        - key: pipeline.tekton.dev/release
          operator: Exists
